# nexora

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  main.tsx  sound.ts  styles.css  tailwind.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: battlenet.rs  commands.rs  controller.rs  db.rs  epic.rs  error.rs  gog.rs  lib.rs  logging.rs  main.rs  models.rs  other.rs  playtime.rs  riot.rs  steam.rs  steamgriddb.rs  util.rs  vdf.rs  xbox.rs
src/components/: ActionRow.tsx  ButtonGlyph.tsx  ContinueRail.tsx  ErrorBoundary.tsx  GameCover.tsx  GameDialog.tsx  GameRail.tsx  LaunchOverlay.tsx  ManualForm.tsx  Onboarding.tsx  Splash.tsx  TopBar.tsx
src/components/settings/: SettingsSidebar.tsx  SettingsView.tsx
src/components/settings/sections/: AboutSection.tsx  AppearanceSection.tsx  ControllerSection.tsx  GeneralSection.tsx  LibrarySection.tsx  SoundSection.tsx
src/components/ui/: Drawer.tsx  button.tsx  select.tsx  switch.tsx
src/hooks/: useControllerInfo.ts  useDelayedFlag.ts  useGameControls.ts  usePlaytimeTracking.ts
src/lib/: gamepad.ts  sources.ts
src/utils/: format.ts
